Mon Nov 14 09:15:27 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/LivelinessTest/Writer.h:
        * tests/DCPS/FooTest5/common.h:

          Fixed warnings on Solaris builds.
          
Sun Nov 13 23:51:43 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
        * performance-tests/DCPS/UDPNoKeyTest/Writer.cpp:
        * tests/DCPS/FooTest3/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/main.cpp:
        * tests/DCPS/FooTest3_1/Writer.cpp:
        * tests/DCPS/FooTest3_1/PubDriver.cpp:
        * tests/DCPS/FooTest3_2/Writer.cpp:
        * tests/DCPS/FooTest3_2/PubDriver.cpp:
        * tests/DCPS/FooTest4_0/Writer.cpp:
        * tests/DCPS/FooTest4_0/Reader.cpp:
        * tests/DCPS/FooTest4_0/main.cpp:
        * tests/DCPS/LivelinessTest/Writer.cpp:
        * tests/DCPS/LivelinessTest/DataReaderListener.cpp:
        * tests/DCPS/MultiTopicTest/Writer.cpp:
        * tests/DCPS/MultiTopicTest/subscriber.cpp:
        * tests/DCPS/MultiTopicTest/DataReaderListener3.cpp:
        * tests/DCPS/MultiTopicTest/DataReaderListener2.cpp:
        * tests/DCPS/MultiTopicTest/DataReaderListener1.cpp:
        * tests/DCPS/FooTest5/subscriber.cpp:
        * tests/DCPS/FooTest5/publisher.cpp:
        * tests/DCPS/FooTest5/DataReaderListener.cpp:
        * tests/DCPS/FooTest4/Reader.cpp:
        * tests/DCPS/FooTest4/main.cpp:
        * DevGuideExamples/DDS/Messenger/publisher.cpp:
        * tests/DCPS/FooTest3_0/PubDriver.cpp:
        * tests/DCPS/BuiltInTopic/main.cpp:
        * tests/DCPS/BuiltInTopic/common.cpp:
        * tests/DCPS/FooType/Foo_Singleton_Transport.h:

          Fixed warnings because of passing _var as _ptr argument.
          
Sun Nov 13 15:57:35 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/BuildChainVisitor.h:
        * dds/DCPS/transport/framework/QueueRemoveVisitor.h:
